// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom jsx function identifies and parses the breakpoints prop 1`] = `
.emotion-0 {
  color: hotpink;
}

@media screen and (min-width: 680px) {
  .emotion-0 {
    color: red;
  }
}

@media screen and (min-width: 90vw) {
  .emotion-0 {
    color: black;
  }
}

<button
  className="emotion-0"
>
  Test button
</button>
`;

exports[`Custom jsx function identifies and parses the custom css prop 1`] = `
.emotion-0 {
  color: hotpink;
}

<button
  className="emotion-0"
>
  Test button
</button>
`;

exports[`Custom jsx function jsx correctly renders an Emotion component 1`] = `
<button>
  Test button
</button>
`;

exports[`Custom jsx function uses package default breakpoints if no theme or breakpoints prop 1`] = `
.emotion-0 {
  color: hotpink;
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    color: red;
  }
}

@media screen and (min-width: 960px) {
  .emotion-0 {
    color: black;
  }
}

<button
  className="emotion-0"
>
  Test button
</button>
`;

exports[`Custom jsx function uses the ThemeProvider default breakpoints if none are specified 1`] = `
.emotion-0 {
  color: hotpink;
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    color: red;
  }
}

@media screen and (min-width: 620px) {
  .emotion-0 {
    color: black;
  }
}

<button
  className="emotion-0"
>
  Test button
</button>
`;
